--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: ProjectE
 version: '1.0-SNAPSHOT'
 main: org.Little_100.projecte.ProjectE
 api-version: '1.16'
+folia-supported: true
 authors: [ Little_100 ]
 description: ProjectE插件(原名贤者之石插件但是突然感觉性质变了就改名ProjectE了)
 website: little100.top
