更新鸣谢列表 然后一点点等价交换的那个什么粉 更新全版本CustomModelData兼容(即1.21.4+和1.21.3-的版本均可以正常显示 即使服务端装了viaversion插件) 那个破粉可以修复对应的武器/工具/盔甲 在哪里都可以 铁砧/工作台 支持自定义指令打开转换桌界面 鬼知道我重装系统后vsc和git抽什么风不能推送

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,7 @@
 # sorry about my poor English, I'm not a native speaker.
-language: # 设置插件语言, 第一个为主要语言, 后续为备用语言.
-# set the first language as the main language, and the rest as the backup language.
+language:
+  # 设置插件语言, 第一个为主要语言, 后续为备用语言.
+  # set the first language as the main language, and the rest as the backup language.
   - "zh_cn"
   - "en_us"
 
@@ -452,8 +453,8 @@ TransmutationTable:
         - turtle_egg: 192
         - elytra: 16463
 
-# Added based on user feedback (2025-07-26)
-        - glow_lichen: 8 # 由 https://github.com/LELEXIAOLL 的帮助添加
+        # Added based on user feedback (2025-07-26)
+        - glow_lichen: 8
         - white_shulker_box: 4176
         - conduit: 40690
         - copper_door: 400
